# sourced_rust

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: read-models.md  research-and-roadmap.md
examples/: main.rs
examples/todos/: lib.rs  todo.rs  todo_repository.rs
plans/: projections-and-commit-builder.md
sourced_rust_macros/: Cargo.toml
sourced_rust_macros/src/: lib.rs  read_model.rs  snapshot.rs
src/: aggregate.rs  commit_builder.rs  entity.rs  error.rs  event.rs  event_emitter.rs  event_record.rs  hashmap_repository.rs  lib.rs  local_event.rs  lock.rs  queued_repository.rs  repository.rs
src/aggregate/: aggregate.rs  mod.rs
src/bus/: bus.rs  event_bus.rs  in_memory_queue.rs  listener.rs  mod.rs  publisher.rs  sender.rs  subscriber.rs
src/commit_builder/: mod.rs
src/core/: aggregate.rs  committable.rs  entity.rs  error.rs  event.rs  event_record.rs  gettable.rs  local_event.rs  mod.rs  repository.rs
src/emitter/: entity_ext.rs  mod.rs
src/entity/: committable.rs  entity.rs  event_record.rs  local_event.rs  mod.rs  upcaster.rs
src/hashmap/: repository.rs
src/hashmap_repo/: mod.rs  repository.rs
src/lock/: error.rs  in_memory.rs  lock.rs  lock_manager.rs  mod.rs
src/microsvc/: context.rs  error.rs  grpc.rs  http.rs  mod.rs  service.rs  session.rs
src/model/: in_memory.rs  mod.rs  model_repository.rs  store.rs
src/outbox/: aggregate.rs  commit.rs  domain_event.rs  message.rs  mod.rs  outbox_entity.rs  outbox_message.rs  publisher.rs  record.rs  repository.rs  repository_ext.rs  worker.rs
src/outbox_worker/: mod.rs  publisher.rs  repository_ext.rs  thread.rs  worker.rs
src/projection/: mod.rs
src/queued/: lock.rs  mod.rs  repository.rs
src/queued_repo/: mod.rs  repository.rs
src/read_model/: in_memory.rs  mod.rs  queued.rs  repository.rs  store.rs
src/repository/: error.rs  gettable.rs  mod.rs  (+1 more)
tests/: blob_game.rs  distributed_saga.rs  projections.rs  sagas.rs  todos.rs
(+118 files in other folders)
