[package]
name = "sourced_rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
bitcode = { version = "0.6.9", features = ["serde"] }
event-emitter-rs = "0.1.4"
serde = "1.0.210"
sourced_rust_macros = { path = "sourced_rust_macros" }

[dev-dependencies]
serde_json = "1.0.128"
