[package]
name = "sourced_rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = ["emitter", "bus"]
emitter = ["dep:event-emitter-rs"]
bus = []

[dependencies]
base64 = "0.22.1"
bitcode = { version = "0.6.9", features = ["serde"] }
event-emitter-rs = { version = "0.1.4", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sourced_rust_macros = { path = "sourced_rust_macros" }

[dev-dependencies]
