[package]
name = "sourced_rust"
version = "0.1.0"
edition = "2021"
description = "CQRS/ES framework for Rust using Plain Old Rust Structs — append-only events, replay, snapshots, outbox, service bus, and pluggable infrastructure"
license = "MIT"
repository = "https://github.com/patrickleet/sourced_rust"
readme = "README.md"
keywords = ["event-sourcing", "cqrs", "ddd", "aggregate", "domain-driven-design"]
categories = ["data-structures", "database"]

[lib]
path = "src/lib.rs"

[features]
default = ["emitter", "bus"]
emitter = ["dep:event-emitter-rs"]
bus = []
http = ["bus"]

[dependencies]
base64 = "0.22.1"
bitcode = { version = "0.6.9", features = ["serde"] }
event-emitter-rs = { version = "0.1.4", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sourced_rust_macros = { path = "sourced_rust_macros" }

[dev-dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
